--- a/temas.css
+++ b/temas.css
@@ -25,9 +25,20 @@
     background-color: rgb(255, 255, 255);
     margin: 2px; ;
     
-     
  }
-.ingles{
+.Ingles{
+    width: 90px;
+    height: 98px;
+    background-color: rgb(255, 255, 255);
+    margin: 2px; ;
+}
+.Tecnologia{
+    width: 90px;
+    height: 98px;
+    background-color: rgb(255, 255, 255);
+    margin: 2px; ;
+}
+.Biologia{
     width: 90px;
     height: 98px;
     background-color: rgb(255, 255, 255);
